WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90407
DFG::ArgumentsSimplificationPhase should assert that the PhantomArguments nodes it creates are not shouldGenerate()
https://bugs.webkit.org/show_bug.cgi?id=90407
Summary
DFG::ArgumentsSimplificationPhase should assert that the PhantomArguments nod...
Filip Pizlo
Reported
2012-07-02 15:33:52 PDT
We already assert this in later phases. But asserting sooner will make tracking bugs easier, not to mention that it makes the phase more self-documenting.
Attachments
the patch
(2.86 KB, patch)
2012-07-02 15:35 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-07-02 15:35:21 PDT
Created
attachment 150484
[details]
the patch Already reviewed in person by Mark. Putting up for EWS while I run my own tests.
Filip Pizlo
Comment 2
2012-07-02 17:10:42 PDT
Landed in
http://trac.webkit.org/changeset/121712
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug